# Django

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base_blog.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
catalog/fixtures/: categories.json  groups.json  products.json
catalog/management/commands/: fill_products.py  load_catalog_data.py  load_sample_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_and_more.py
catalog/templates/: _menu.html  base.html  contacts.html  home.html  product_detail.html
catalog/templates/catalog/: category_products.html  product_confirm_delete.html  product_form.html
catalog/templates/catalog/partials/: _menu.html
catalog/templates/partials/: menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
